src/styles/simple-table.css
/* ... */
.theme-bubblegum {
  --st-border-color: var(--pink-500);
  --st-odd-row-background-color: var(--pink-50);
  --st-even-row-background-color: var(--pink-100);
  --st-header-background-color: var(--pink-200);
  --st-dragging-background-color: var(--pink-300);
  --st-selected-cell-background-color: var(--pink-400);
  --st-selected-first-cell-background-color: var(--pink-600);
  --st-footer-background-color: var(--pink-50);
  --st-cell-color: var(--pink-900);
  --st-cell-odd-row-color: var(--pink-800);
  --st-shadow: 0 1px 3px 0 var(--black / 0.1), 0 1px 2px -1px var(--black / 0.1);
  --st-shadow-hover: 0 4px 6px -1px var(--black / 0.1),
    0 2px 4px -1px var(--black / 0.06);
  --st-selected-cell-color: var(--pink-900);
  --st-selected-first-cell-color: var(--pink-900);
  --st-resize-handle-color: var(--pink-400);
  --st-separator-border-color: var(--pink-500);
  --st-selected-border-top-color: var(--pink-700);
  --st-selected-border-bottom-color: var(--pink-700);
  --st-selected-border-left-color: var(--pink-700);
  --st-selected-border-right-color: var(--pink-700);
  --st-checkbox-checked-background-color: var(--pink-500);
  --st-checkbox-checked-border-color: var(--pink-500);
  --st-column-editor-background-color: var(--pink-100);
  --st-column-editor-popout-background-color: var(--pink-100);
  --st-button-hover-background-color: var(--pink-300);
  --st-button-active-background-color: var(--pink-400);
  --st-font-family: "Pacifico", cursive;
  --st-editable-cell-focus-border-color: var(--pink-600);
}

.theme-90s {
  --st-border-color: var(--gray-500);
  --st-odd-row-background-color: var(--gray-100);
  --st-even-row-background-color: var(--gray-200);
  --st-header-background-color: var(--gray-300);
  --st-dragging-background-color: var(--gray-400);
  --st-selected-cell-background-color: var(--gray-500);
  --st-selected-first-cell-background-color: var(--gray-600);
  --st-footer-background-color: var(--gray-100);
  --st-cell-color: var(--gray-900);
  --st-cell-odd-row-color: var(--gray-800);
  --st-shadow: 0 1px 3px 0 var(--black / 0.1), 0 1px 2px -1px var(--black / 0.1);
  --st-shadow-hover: 0 4px 6px -1px var(--black / 0.1),
    0 2px 4px -1px var(--black / 0.06);
  --st-selected-cell-color: var(--gray-900);
  --st-selected-first-cell-color: var(--gray-900);
  --st-resize-handle-color: var(--gray-400);
  --st-separator-border-color: var(--gray-500);
  --st-selected-border-top-color: var(--gray-700);
  --st-selected-border-bottom-color: var(--gray-700);
  --st-selected-border-left-color: var(--gray-700);
  --st-selected-border-right-color: var(--gray-700);
  --st-checkbox-checked-background-color: var(--gray-500);
  --st-checkbox-checked-border-color: var(--gray-500);
  --st-column-editor-background-color: var(--gray-200);
  --st-column-editor-popout-background-color: var(--gray-200);
  --st-button-hover-background-color: var(--gray-300);
  --st-button-active-background-color: var(--gray-400);
  --st-font-family: "Courier New", monospace;
  --st-editable-cell-focus-border-color: var(--gray-600);
}

/* Global styles */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: var(--st-font-family);
  scrollbar-color: var(--st-scrollbar-thumb-color) var(--st-scrollbar-bg-color);
  scrollbar-width: thin;
}

/* Apply Nunito as the default font */
body {
  font-size: var(--st-font-size);
  font-weight: var(--st-font-weight-normal);
}

/* Wrapper for the table */
.st-wrapper {
  position: relative;
  border: var(--st-border-width) solid var(--st-border-color);
  border-radius: var(--st-border-radius);
  max-height: 100dvh;
  overflow: hidden;
}

.st-table-wrapper-container {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
}
.st-table-wrapper {
  position: relative;
  display: flex;
  overflow: auto;
  height: 100%;
  width: 100%;
}
.st-table-content {
  display: flex;
  flex-direction: column;
}

/* Header */

.st-table-header-container {
  display: flex;
}

.st-header-pinned-left,
.st-header-main,
.st-header-pinned-right {
  display: grid;
}
.st-header-pinned-left {
  border-right: var(--st-border-width) solid var(--st-border-color);
}
.st-header-pinned-right {
  border-left: var(--st-border-width) solid var(--st-border-color);
}
.st-header-main {
  overflow: auto;
  scrollbar-width: none;
  -ms-overflow-style: none;
}
.st-header-main::-webkit-scrollbar {
  display: none;
}

/* Styles for table header cells */
.st-header-cell {
  position: sticky;
  top: 0;
  background-color: var(--st-header-background-color);
  z-index: 1;
  font-weight: var(--st-font-weight-bold);

  display: flex;
  align-items: center;
  gap: var(--st-spacing-small);
  border-top: var(--st-border-width) solid transparent;
  border-bottom: var(--st-border-width) solid var(--st-border-color);
}
.st-header-cell.clickable {
  cursor: pointer;
}
.st-header-cell.draggable {
  cursor: grab;
}

/* Common styles for table header and cells */
.st-header-cell,
.st-cell {
  color: var(--slate-800);
  overflow: hidden;
  /* mix-blend-mode: multiply; */
}

.st-cell.clickable {
  cursor: pointer;
}

.st-header-cell,
.st-cell,
.st-cell-editing {
  width: 100%;
  height: 40px;
}

.st-cell-editing {
  position: relative;
}

.st-header-label {
  flex: 1;
  color: var(--st-cell-color);
}

.st-header-label,
.st-cell {
  user-select: none;
  padding: var(--st-cell-padding);
  text-align: left;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  width: 100%;
}
.st-cell {
  position: relative;
  border: var(--st-border-width) solid transparent;
}
.st-sort-icon-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.st-sort-icon {
  fill: var(--slate-500);
}

.st-header-resize-handle {
  top: 0;
  right: 0;
  width: 5px;
  height: 20px;
  cursor: col-resize;
  background-color: var(--st-resize-handle-color);
  border-radius: 0.25rem;
}
/* ... */

